added integr test for user service